--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "sweetalert2": "^11.10.3",
+    "swiper": "^11.0.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
